Fix work-item spacing

--- a/_sass/_work.scss
+++ b/_sass/_work.scss
@@ -1,11 +1,12 @@
+.work-item {
+  clear: both;
+  overflow: hidden;
+  padding-bottom: 3em;
+}
+
 .work-bubble {
   float: left;
   padding-right: 20px;
   width: 100px;
   height: 100px;
-}
-
-.work-item {
-  clear: both;
-  padding-bottom: 3em;
 }
